Align seats and space type; fix SPOT-961. Hide Seats on spaces that should have no capacity; fix SPOT-956

--- a/static/css/desktop.less
+++ b/static/css/desktop.less
@@ -117,7 +117,7 @@
 
                 .space-detail-header { position: relative; height: 60px;
                     .space-detail-type { color: @grey_dark;
-                        .space-detail-capacity { color: @grey_light; font-size: 11px; text-transform: uppercase; display: inline-block; margin-left: 5px; }
+                        .space-detail-capacity { color: @grey_light; font-size: 11px; text-transform: uppercase; display: inline-block; margin-left: 5px; height: 20px; }
                         
                     }
                     .space-detail-name { font-size: 20px; color: @purple_text; margin: 5px 0;  line-height:20px; font-weight:normal; }
